--- a/package.json
+++ b/package.json
@@ -58,13 +58,13 @@
     "url": "https://github.com/muecoin/bitcore-p2p-mue.git"
   },
   "dependencies": {
-    "bitcore-lib-mue": "latest",
+    "bitcore-lib-mue": "muecoin/bitcore-lib-mue",
     "bloom-filter": "^0.2.0",
     "buffers": "^0.1.1",
     "socks5-client": "^0.3.6"
   },
   "devDependencies": {
-    "bitcore-build-mue": "latest",
+    "bitcore-build-mue": "muecoin/bitcore-build-mue",
     "brfs": "^1.2.0",
     "chai": "~1.10.0",
     "gulp": "^3.8.10",
